--- a/dashboard/src/popup/popup.html
+++ b/dashboard/src/popup/popup.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
+  <link rel="stylesheet" href="../assets/css/default.css">
   <link rel="stylesheet" href="popup.css">
   <% if (NODE_ENV === 'development') { %>
   <!-- Load some resources only in development environment -->
