--- a/dashboard/src/tab/tab.html
+++ b/dashboard/src/tab/tab.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>dashboard - Options</title>
+  <title>Dashboard</title>
   <link rel="stylesheet" href="../assets/css/default.css">
-  <link rel="stylesheet" href="options.css">
+  <link rel="stylesheet" href="tab.css">
   <% if (NODE_ENV === 'development') { %>
   <!-- Load some resources only in development environment -->
   <% } %>
 </head>
 <body>
   <div id="app"></div>
-  <script src="options.js"></script>
+  <script src="tab.js"></script>
 </body>
 </html>
