created top bar file, background

--- a/dashboard/src/tab/tab.html
+++ b/dashboard/src/tab/tab.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Dashboard</title>
+  <link rel="stylesheet" href="../assets/css/tab_default.css">
   <link rel="stylesheet" href="../assets/css/default.css">
   <link rel="stylesheet" href="tab.css">
   <% if (NODE_ENV === 'development') { %>
