--- a/dashboard/src/tab/tab.html
+++ b/dashboard/src/tab/tab.html
@@ -6,6 +6,15 @@
   <link rel="stylesheet" href="../assets/css/tab_default.css">
   <link rel="stylesheet" href="../assets/css/default.css">
   <link rel="stylesheet" href="tab.css">
+
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap" rel="stylesheet">
+  <!--  font-family: 'Raleway', sans-serif;-->
+  <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
+  <!--  font-family: 'Audiowide', cursive;-->
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;800&display=swap" rel="stylesheet">
+  <!--  font-family: 'Orbitron', sans-serif;-->
+
   <% if (NODE_ENV === 'development') { %>
   <!-- Load some resources only in development environment -->
   <% } %>
