typing effects finally working

--- a/dashboard/src/tab/tab.html
+++ b/dashboard/src/tab/tab.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Dashboard</title>
+  <title>New Tab - Dashboard</title>
   <link rel="stylesheet" href="../assets/css/tab_default.css">
   <link rel="stylesheet" href="../assets/css/default.css">
-  <link rel="stylesheet" href="../assets/css/tab_default.css">
   <link rel="stylesheet" href="../assets/css/animations.css">
+  <link rel="stylesheet" href="../assets/css/typed.css">
   <link rel="stylesheet" href="tab.css">
 
   <!-- Fonts -->
