settings menu with sound effects option working

--- a/dashboard/src/tab/tab.html
+++ b/dashboard/src/tab/tab.html
@@ -16,6 +16,8 @@
   <!--  font-family: 'Audiowide', cursive; -->
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;800&display=swap" rel="stylesheet">
   <!--  font-family: 'Orbitron', sans-serif; -->
+  <link href="https://fonts.googleapis.com/css2?family=Aldrich&display=swap" rel="stylesheet">
+  <!--  font-family: 'Aldrich', sans-serif; -->
 
   <% if (NODE_ENV === 'development') { %>
   <!-- Load some resources only in development environment -->
