started time panel

--- a/dashboard/src/tab/tab.html
+++ b/dashboard/src/tab/tab.html
@@ -19,6 +19,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Aldrich&display=swap" rel="stylesheet">
   <!--  font-family: 'Aldrich', sans-serif; -->
 
+  <!-- Icons -->
+  <link rel="stylesheet" href="../assets/css/fa_all.min.css">
+  <script defer src="../assets/js/fa_all.min.js"></script>
+
   <% if (NODE_ENV === 'development') { %>
   <!-- Load some resources only in development environment -->
   <% } %>
