time modal open/close

--- a/dashboard/src/tab/tab.html
+++ b/dashboard/src/tab/tab.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>New Tab - Dashboard</title>
   <link rel="stylesheet" href="../assets/css/tab_default.css">
-  <link rel="stylesheet" href="../assets/css/default.css">
+<!--  <link rel="stylesheet" href="../assets/css/animate.css">-->
   <link rel="stylesheet" href="../assets/css/animations.css">
   <link rel="stylesheet" href="../assets/css/typed.css">
   <link rel="stylesheet" href="tab.css">
