local chatlist saving working (I think)

--- a/dashboard/src/tab/tab.html
+++ b/dashboard/src/tab/tab.html
@@ -20,8 +20,7 @@
   <!--  font-family: 'Aldrich', sans-serif; -->
 
   <!-- Icons -->
-  <link rel="stylesheet" href="../assets/css/fa_all.min.css">
-  <script defer src="../assets/js/fa_all.min.js"></script>
+  <script src="../assets/js/fontawesome.js" crossorigin="anonymous"></script>
 
   <% if (NODE_ENV === 'development') { %>
   <!-- Load some resources only in development environment -->
