--- a/dashboard/src/tab/tab.html
+++ b/dashboard/src/tab/tab.html
@@ -1,4 +1,10 @@
 <!DOCTYPE html>
+
+<!--
+Hey there! Do you have Node/Vue/CSS experience and want to help out with this dashboard?
+Feel free to contact me at https://benjaminashbaugh.me/#contact
+-->
+
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -20,7 +26,7 @@
   <!--  font-family: 'Aldrich', sans-serif; -->
 
   <!-- Icons -->
-  <script src="../assets/js/fontawesome.js" crossorigin="anonymous"></script>
+  <script src="../assets/js/fontawesome.js"></script>
 
   <% if (NODE_ENV === 'development') { %>
   <!-- Load some resources only in development environment -->
